src/objects/Connectivity_System__c.object
<CustomObject>
    <fields>
        <fullName>Connectivity_System_Type__c</fullName>
        <label>Connectivity System Type</label>
        <picklist>
            <picklistValues>
                <fullName>CRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Allocator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Connectivity_Vendor__c</fullName>
        <label>Connectivity Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Connectivity Systems</relationshipLabel>
        <relationshipName>Connectivity_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Connectivity_System_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Connectivity System ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Go_Date__c</fullName>
        <label>Go Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>System_ID__c</fullName>
        <label>System ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Connectivity System</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Connectivity_Vendor__c</columns>
        <columns>System_ID__c</columns>
        <columns>Connectivity_System_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Connectivity System Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connectivity Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>